# django-semestrovka

./: .pre-commit-config.yaml  Dockerfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
app1/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
app1/business_rules/owner/: promotion.py  restaurant.py
app1/migrations/: 0001_initial.py  0002_alter_restaurant_owner.py  0003_menu.py  0004_promotion.py  0005_rename_promotion_name_promotion_name.py  0006_customer_owner_employee.py  0007_promotion_image.py
app2/: prometheus.py  urls.py  views.py
auth_app/: admin.py  models.py  serializers.py  tests.py  views.py
auth_app/business_rules/: registration.py
auth_app/migrations/: 0001_initial.py  0002_owner.py  0003_customer_employee.py  0004_user_user_type.py  0005_rename_user_type_user_user_level.py  0006_employee_owner.py  0007_alter_employee_owner.py  0008_customer_balance_customer_spent.py  0009_delete_customer_delete_employee_delete_owner.py
semestrovka/: asgi.py  settings.py  urls.py  wsgi.py
semestrovka/middlewares/: service_accounts.py
